--- a/TODO
+++ b/TODO
@@ -398,3 +398,24 @@
   C_word k, C_word type, ...)= (callback).
 
   [[http://wiki.call-cc.org/man/4/Data%20representation][instructive]].
+* TODO compilation referencing chicken
+  [[http://docstore.mik.ua/orelly/apache_mod/171.htm#BIN370][this]] works, interestingly:
+
+  #+BEGIN_SRC sh
+    make clean all && sudo apxs -c -i -n scheme prelude.c mod_scheme.c && sudo apachectl graceful
+  #+END_SRC
+
+  #+BEGIN_QUOTE
+  LoadFile /usr/local/lib/libchicken.so.5
+  LoadFile modules/prelude.so
+  LoadModule scheme_module modules/mod_scheme.so
+  #+END_QUOTE
+
+  shit load of segmentation faults, though. (whoops: wasn't
+  initializing chicken!)
+
+  i now seem to need this monstrosity; why?
+
+  #+BEGIN_SRC sh
+    sudo rm -fv /usr/local/apache2/modules/mod_scheme.* && sudo make clean all && sudo apxs -a -c -i -n scheme prelude.c mod_scheme.c && sudo cp -v .libs/* /usr/local/apache2/modules/ && sudo apachectl restart
+  #+END_SRC
