format-like arguments to log; debug-level parameter

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 # -*- org -*-
+* TODO abstract out the 500-handlers in =prelude.scm=.
 * TODO more meaningful file, line and location in error messages
 * TODO apparently the handler-environment is fucked up;
   can't import =ports=, etc.
