--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 # -*- org -*-
-* TODO abstract out the 500-handlers in =prelude.scm=.
+* DONE abstract out the 500-handlers in =prelude.scm=.
+  CLOSED: [2011-03-11 Fri 07:41]
 * TODO more meaningful file, line and location in error messages
 * TODO apparently the handler-environment is fucked up;
   can't import =ports=, etc.
